--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-cookie-consent": "^7.3.1",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
   },
