--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-cookie-consent": "^7.3.1",
     "react-div-100vh": "^0.7.0",
     "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
