--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.5.1",
+    "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.5.1",
     "framer-motion": "^6.2.9",
+    "html-entities": "^2.3.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-card-flip": "^1.1.5",
     "react-cookie-consent": "^7.3.1",
     "react-div-100vh": "^0.7.0",
     "react-dom": "17.0.2",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3"
