--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.5",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.5.1",
     "framer-motion": "^6.2.9",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "html-entities": "^2.3.3",
     "next": "12.1.0",
     "react": "17.0.2",
