--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql-tag": "^2.12.6",
     "html-entities": "^2.3.3",
     "next": "12.1.0",
+    "next-sitemap": "^3.1.54",
     "react": "17.0.2",
     "react-card-flip": "^1.1.5",
     "react-cookie-consent": "^7.3.1",
